# C

./: README.md  TestingGround.cpp
C#/: instructions.txt
C#/ConsoleApp1/: Program.cs
C#/MyMicroservice/: MyMicroservice.http
C#/MyMicroservice/Properties/: launchSettings.json
C++/: HelloWorld.cpp  Makefile  Simple Record System.cpp
C++/ConFPS/: ConFPS.sln  ConFPS.vcxproj  Source.cpp
C++/ConFPS/ConFPS/x64/Debug/: ConFPS.exe.recipe  ConFPS.ilk  vc143.idb
C++/ConFPS/ConFPS/x64/Debug/ConFPS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConFPS.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
C++/Database/: .gitignore  CMakeLists.txt  LOGGING.md  README.md
C++/Database/python-cpp-db-api/: .env  CMakeLists.txt  README.md  build_windows.bat  find_library.bat  install_package.bat  pyproject.toml  setup.py
C++/Database/python-cpp-db-api/bindings/: db_module.cpp
C++/Database/python-cpp-db-api/examples/: advanced_queries.py  basic_connection.py
C++/Database/python-cpp-db-api/src/cpp_wrapper/: CMakeLists.txt  db_bridge.cpp  db_bridge.h
C++/Database/python-cpp-db-api/src/python/: __init__.py  models.py
C++/Database/python-cpp-db-api/src/python_cpp_db_api/: api.py  connection.py
C++/Database/python-cpp-db-api/tests/: test_connection.py  test_queries.py  test_stress_comparison.py
C++/Database/src/: main.cpp
C++/Database/src/benchmark/: benchmark_framework.cpp  benchmark_framework.h  benchmark_framework.tpp
C++/Database/src/database/: database.cpp  database.h
C++/Database/src/index/: bplus_tree.h  bplus_tree.tpp
C++/Database/src/lsm/: compaction.h  compaction.tpp  lsm_tree.h  lsm_tree.tpp  memtable.h  memtable.tpp  sstable.h  sstable.tpp
C++/Database/src/memory/: memory_allocator.cpp  memory_allocator.h  memory_manager.cpp  memory_manager.h
C++/Database/src/query/: query_processor.cpp  query_processor.h
C++/Database/src/storage/: mmap_manager.cpp  mmap_manager.h  storage_engine.cpp  storage_engine.h
C++/Database/src/utils/: logger.cpp  logger.h
C++/Database/tests/: benchmark.cpp  database_tests.cpp  query_tests.cpp  storage_tests.cpp
C++/MoveFilesCron/: README.md
C++/Object-Oriented-C-1/: main.cpp
C++/StudentRecordMgmt/: README.md  adFunc.h
C++/reverseProj/: input.txt  main.cpp  output.txt
C++/snake/: main.cpp
Dungeon-Crawler-Game/: room.cpp
Introduction/: main.cpp
StudentRecordMgmt/: loadingBar.h  main.cpp
base_proj/: WindowsInstallation.txt  oldCode.cpp
base_proj/sfml-project/: enemy.cpp  enemy.h  gameWorld.cpp  gameWorld.h  main  main.cpp  texts.cpp  texts.h
