[tool.poetry]
name = "python-cpp-db-api"
version = "0.1.0"
description = "A Python API for connecting to a C++ database."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Add other dependencies here

[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.15"]
build-backend = "setuptools.build_meta"

[project]
name = "python-cpp-db-api"
version = "0.1.0"
description = "Python API for C++ Database Engine"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Database API Team", email = "team@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]
dependencies = []
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/yourusername/python-cpp-db-api"
"Bug Tracker" = "https://github.com/yourusername/python-cpp-db-api/issues"